--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  outline: none;
+}
+.container {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 20px 60px 20px;
+}
+.container .content {
+  text-align: center;
+}
+.container .content h3 {
+  font-size: 30px;
+  color: #333;
+}
+.container .content h3 span {
+  background: cornflowerblue;
+  color: #fff;
+  padding: 5px 15px;
+  border-radius: 5px;
 }
 
+.container .content h1 {
+  font-size: 50px;
+  color: #333;
+}
+.container .content h1 span {
+  color: cornflowerblue;
+}
+.container .content p {
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+.container .content .btn {
+  display: inline-block;
+  padding: 10px 30px;
+  margin: 0 5px;
+  color: #fff;
+  background: #333;
+  text-transform: uppercase;
+  transition: 0.6s;
+}
+.container .content .btn:hover {
+  background: cornflowerblue;
+}
