--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,43 @@
 .container .content .btn:hover {
   background: cornflowerblue;
 }
+
+
+
+.form-container{
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 20px 60px 20px;
+  background: #eee;
+}
+.form-container form{
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.1);
+  text-align: center;
+  max-width: 500px;
+  margin: auto;
+}
+.form-container form h3{
+  font-size: 30px;
+  color: #333;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+.form-container form input, .form-container form select{
+  width: 100%;
+  padding: 5px 15px;
+  margin-bottom: 10px;
+}
+.form-container form .form-btn{
+  background: #333;
+  color: #fff;
+  transition: 0.6s;
+  text-transform: capitalize;
+}
+.form-container form .form-btn:hover{
+  background: cornflowerblue;
+}
